--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "chainalysis-work-test",
   "version": "0.1.0",
   "private": true,
+  "author": "Agastya Ahluwalia <agastya_5@hotmail.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "coinbase": "^2.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
